1.2.3 (unreleased)
 * Support for connection compressions configuration (SPARKC-124)

1.2.2
 * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
 * Enabled Java API artifact generation for Scala 2.11.x (SPARKC-130)
 * Fixed a bug preventing a custom type converter from being used
   when saving data. RowWriter implementations must
   perform type conversions now. (SPARKC-157)

1.2.1
 * Fixed problems with mixed case keyspaces in ReplicaMapper (SPARKC-159)

1.2.0
 * Removed conversion method rom WriteOption which accepted object of Duration type
   from Spark Streaming (SPARKC-106)
 * Fixed compilation warnings (SPARKC-76)
 * Fixed ScalaDoc warnings (SPARKC-119)
 * Synchronized TypeTag access in various places (SPARKC-123)
 * Adds both hostname and hostaddress as partition preferredLocations (SPARKC-126)

1.2.0 RC 3
 * Select aliases are no longer ignored in CassandraRow objects (SPARKC-109)
 * Fix picking up username and password from SparkConf (SPARKC-108)
 * Fix creating CassandraConnectorSource in the executor environment (SPARKC-111)

1.2.0 RC 2
 * Cross cluster table join and write for Spark SQL (SPARKC-73)
 * Enabling / disabling metrics in metrics configuration file and other metrics fixes (SPARKC-91)
 * Provided a way to set custom auth config and connection factory properties (SPARKC-105)
 * Fixed setting custom connection factory and other properties (SPAKRC-102)
 * Fixed Java API (SPARKC-95)

1.2.0 RC 1
 * More Spark SQL predicate push (SPARKC-72)
 * Fixed some Java API problems and refactored its internals (SPARKC-77)
 * Allowing specification of column to property map (aliases) for reading and writing objects
   (SPARKC-9)
 * Added interface for doing primary key joins between arbitrary RDDs and Cassandra (SPARKC-25)
 * Added method for repartitioning an RDD based upon the replication of a Cassandra Table (SPARKC-25)
 * Fixed setting batch.level and batch.buffer.size in SparkConf. (SPARKC-84)