@@ -137,7 +137,8 @@ object EmbeddedCassandra {
       "rpc_address"           -> host,
       "rpc_port"              -> getRpcPort(index).toString,
       "listen_address"        -> host,
-      "cluster_name"          -> getClusterName(index))
+      "cluster_name"          -> getClusterName(index),
+      "keystore_path"         -> ClassLoader.getSystemResource("keystore").getPath)
   }
 
   def getStoragePort(index: Integer) = 7000 + index
