@@ -2,24 +2,25 @@ package com.datastax.spark.connector.cql
 
 import java.io.FileInputStream
 import java.net.InetAddress
-import java.security.{SecureRandom, KeyStore}
-import javax.net.ssl.{TrustManagerFactory, SSLContext}
-
-import org.apache.cassandra.thrift._
-import org.apache.spark.SparkConf
-import org.apache.thrift.protocol.TBinaryProtocol
-import org.apache.thrift.transport.TTransport
-import org.apache.cassandra.thrift.SSLTransportFactory
-
-import com.datastax.driver.core.policies.ExponentialReconnectionPolicy
-import com.datastax.driver.core.{SSLOptions, Cluster, SocketOptions}
-import com.datastax.spark.connector.util.ReflectionUtil
+import java.security.{KeyStore, SecureRandom}
+import javax.net.ssl.{SSLContext, TrustManagerFactory}
 
 import scala.collection.JavaConversions._
 
+import org.apache.cassandra.thrift._
+import org.apache.commons.io.IOUtils
+import org.apache.spark.SparkConf
+import org.apache.thrift.protocol.TBinaryProtocol
+import org.apache.thrift.transport.TTransport
+
+import com.datastax.driver.core.policies.ExponentialReconnectionPolicy
+import com.datastax.driver.core.{Cluster, SSLOptions, SocketOptions}
+import com.datastax.spark.connector.cql.CassandraConnectorConf.CassandraSSLConf
+import com.datastax.spark.connector.util.ReflectionUtil
+
 /** Creates both native and Thrift connections to Cassandra.
   * The connector provides a DefaultConnectionFactory.
-  * Other factories can be plugged in by setting `spark.cassandra.connection.factory` option.*/
+  * Other factories can be plugged in by setting `spark.cassandra.connection.factory` option. */
 trait CassandraConnectionFactory extends Serializable {
 
   /** Creates and configures a Thrift client.
@@ -39,28 +40,12 @@ object DefaultConnectionFactory extends CassandraConnectionFactory {
   /** Creates and configures a Thrift client.
     * To be removed in the near future, when the dependency from Thrift will be completely dropped. */
   override def createThriftClient(conf: CassandraConnectorConf, hostAddress: InetAddress) = {
-    var transport: TTransport= null
+    var transport: TTransport = null
     try {
-      val transportFactory: ITransportFactory = conf.sslEnabled match {
-      case false => new TFramedTransportFactory()
-        case true => {
-          val options = scala.collection.mutable.Map[String, String]()
-          conf.sslTrustStorePath match {
-            case None => Unit
-            case path: Some[String] => {
-              options.put(SSLTransportFactory.TRUSTSTORE, path.get)
-              conf.sslTrustStorePassword match {
-                case None => Unit
-                case password: Some[String] => options.put(SSLTransportFactory.TRUSTSTORE_PASSWORD, password.get)
-              }
-            }
-          }
-          options.put(SSLTransportFactory.CIPHER_SUITES, Array(SSLOptions.DEFAULT_SSL_CIPHER_SUITES).mkString(","))
-          val factory: ITransportFactory = new SSLTransportFactory()
-          factory.setOptions(options)
-          factory
-        }
-      }
+      val transportFactory = createTransportFactory(conf.cassandraSSLConf)
+      val options = getTransportFactoryOptions(transportFactory.supportedOptions().toSet, conf)
+      transportFactory.setOptions(options)
+
       transport = transportFactory.openTransport(hostAddress.getHostAddress, conf.rpcPort)
       val client = new Cassandra.Client(new TBinaryProtocol(transport))
       val creds = conf.authConf.thriftCredentials
@@ -77,13 +62,30 @@ object DefaultConnectionFactory extends CassandraConnectionFactory {
     }
   }
 
+  def getTransportFactoryOptions(supportedOptions: Set[String], conf: CassandraConnectorConf) = Seq(
+    conf.cassandraSSLConf.trustStorePath.map("enc.truststore" → _),
+    conf.cassandraSSLConf.trustStorePassword.map("enc.truststore.password" → _),
+    Some("enc.protocol" → conf.cassandraSSLConf.protocol),
+    Some("enc.cipher.suites" → conf.cassandraSSLConf.cipherSuites.mkString(","))
+  ).flatten.toMap.filterKeys(supportedOptions.contains)
+
+  def createTransportFactory(conf: CassandraSSLConf): ITransportFactory = {
+    conf.enabled match {
+      case false ⇒ new TFramedTransportFactory()
+      case true ⇒
+        val factoryClass = Class.forName("org.apache.cassandra.thrift.SSLTransportFactory")
+        val factory = factoryClass.newInstance()
+        factory.asInstanceOf[ITransportFactory]
+    }
+  }
+
   /** Returns the Cluster.Builder object used to setup Cluster instance. */
   def clusterBuilder(conf: CassandraConnectorConf): Cluster.Builder = {
     val options = new SocketOptions()
       .setConnectTimeoutMillis(conf.connectTimeoutMillis)
       .setReadTimeoutMillis(conf.readTimeoutMillis)
 
-    Cluster.builder()
+    val builder = Cluster.builder()
       .addContactPoints(conf.hosts.toSeq: _*)
       .withPort(conf.nativePort)
       .withRetryPolicy(
@@ -95,37 +97,44 @@ object DefaultConnectionFactory extends CassandraConnectionFactory {
       .withAuthProvider(conf.authConf.authProvider)
       .withSocketOptions(options)
       .withCompression(conf.compression)
-  }
 
-  /** Returns the Cluster.Builder object used to setup Cluster instance. */
-  def clusterSSLBuilder(conf: CassandraConnectorConf, builder: Cluster.Builder): Cluster.Builder = conf.sslEnabled match {
-    case false => builder
-    case true => clusterSSLBuilderOptions(conf, builder)
-  }
-
-  private def clusterSSLBuilderOptions(conf: CassandraConnectorConf, builder: Cluster.Builder): Cluster.Builder = conf.sslTrustStorePath match {
-    case None => builder.withSSL()
-    case path: Some[String] => {
-      val trustStoreFile = new FileInputStream(path.get)
-      val context = SSLContext.getInstance("SSL")
-      val keyStore = KeyStore.getInstance("JKS")
-      conf.sslTrustStorePassword match {
-        case None => keyStore.load(trustStoreFile, null)
-        case password: Some[String] => keyStore.load(trustStoreFile, password.get.toCharArray)
+    if (conf.cassandraSSLConf.enabled) {
+      maybeCreateSSLOptions(conf.cassandraSSLConf) match {
+        case Some(sslOptions) ⇒ builder.withSSL(sslOptions)
+        case None ⇒ builder.withSSL()
       }
-      val tmf = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm)
-      tmf.init(keyStore)
-      context.init(null, tmf.getTrustManagers, new SecureRandom)
-      val sslOptions = new SSLOptions(context, SSLOptions.DEFAULT_SSL_CIPHER_SUITES)
-      builder.withSSL(sslOptions)
+    } else {
+      builder
+    }
+  }
+
+  private def maybeCreateSSLOptions(conf: CassandraSSLConf): Option[SSLOptions] = {
+    conf.trustStorePath map {
+      case path ⇒
+
+        val trustStoreFile = new FileInputStream(path)
+        val tmf = try {
+          val keyStore = KeyStore.getInstance(conf.trustStoreType)
+          conf.trustStorePassword match {
+            case None ⇒ keyStore.load(trustStoreFile, null)
+            case Some(password) ⇒ keyStore.load(trustStoreFile, password.toCharArray)
+          }
+          val tmf = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm)
+          tmf.init(keyStore)
+          tmf
+        } finally {
+          IOUtils.closeQuietly(trustStoreFile)
+        }
+
+        val context = SSLContext.getInstance(conf.protocol)
+        context.init(null, tmf.getTrustManagers, new SecureRandom)
+        new SSLOptions(context, conf.cipherSuites)
     }
   }
 
   /** Creates and configures native Cassandra connection */
   override def createCluster(conf: CassandraConnectorConf): Cluster = {
-    val builder = clusterBuilder(conf)
-    clusterSSLBuilder(conf, builder)
-    builder.build()
+    clusterBuilder(conf).build()
   }
 
 }
