@@ -5,10 +5,10 @@ import java.net.InetAddress
 
 import scala.collection.JavaConversions._
 
-import org.apache.spark.SparkConf
+import org.apache.spark.{Logging, SparkConf}
 
 import com.datastax.driver.core.{Cluster, Host, Session}
-import org.apache.spark.Logging
+import com.datastax.spark.connector.cql.CassandraConnectorConf.CassandraSSLConf
 
 
 /** Provides and manages connections to Cassandra.
@@ -29,21 +29,24 @@ import org.apache.spark.Logging
   * A `CassandraConnector` object is configured from [[CassandraConnectorConf]] object which
   * can be either given explicitly or automatically configured from [[org.apache.spark.SparkConf SparkConf]].
   * The connection options are:
-  *   - `spark.cassandra.connection.host`:               contact point to connect to the Cassandra cluster, defaults to spark master host
-  *   - `spark.cassandra.connection.rpc.port`:           Cassandra thrift port, defaults to 9160
-  *   - `spark.cassandra.connection.native.port`:        Cassandra native port, defaults to 9042
-  *   - `spark.cassandra.connection.factory`:            name of a Scala module or class implementing [[CassandraConnectionFactory]] that allows to plugin custom code for connecting to Cassandra
-  *   - `spark.cassandra.connection.keep_alive_ms`:      how long to keep unused connection before closing it (default 250 ms)
-  *   - `spark.cassandra.connection.timeout_ms`:         how long to wait for connection to the Cassandra cluster (default 5 s)
+  *   - `spark.cassandra.connection.host`:                      contact point to connect to the Cassandra cluster, defaults to spark master host
+  *   - `spark.cassandra.connection.rpc.port`:                  Cassandra thrift port, defaults to 9160
+  *   - `spark.cassandra.connection.native.port`:               Cassandra native port, defaults to 9042
+  *   - `spark.cassandra.connection.factory`:                   name of a Scala module or class implementing [[CassandraConnectionFactory]] that allows to plugin custom code for connecting to Cassandra
+  *   - `spark.cassandra.connection.keep_alive_ms`:             how long to keep unused connection before closing it (default 250 ms)
+  *   - `spark.cassandra.connection.timeout_ms`:                how long to wait for connection to the Cassandra cluster (default 5 s)
   *   - `spark.cassandra.connection.reconnection_delay_ms.min`: initial delay determining how often to try to reconnect to a dead node (default 1 s)
   *   - `spark.cassandra.connection.reconnection_delay_ms.max`: final delay determining how often to try to reconnect to a dead node (default 60 s)
-  *   - `spark.cassandra.auth.username`:                 login for password authentication
-  *   - `spark.cassandra.auth.password`:                 password for password authentication
-  *   - `spark.cassandra.auth.conf.factory`:             name of a Scala module or class implementing [[AuthConfFactory]] that allows to plugin custom authentication configuration
-  *   - `spark.cassandra.query.retry.count`:             how many times to reattempt a failed query (default 10)
-  *   - `spark.cassandra.connection.ssl.enabled`:        enable secure connection to Cassandra cluster
+  *   - `spark.cassandra.auth.username`:                        login for password authentication
+  *   - `spark.cassandra.auth.password`:                        password for password authentication
+  *   - `spark.cassandra.auth.conf.factory`:                    name of a Scala module or class implementing [[AuthConfFactory]] that allows to plugin custom authentication configuration
+  *   - `spark.cassandra.query.retry.count`:                    how many times to reattempt a failed query (default 10)
+  *   - `spark.cassandra.connection.ssl.enabled`:               enable secure connection to Cassandra cluster
   *   - `spark.cassandra.connection.ssl.trust_store.path`:      path for the trust store being used
   *   - `spark.cassandra.connection.ssl.trust_store.password`:  trust store password
+  *   - `spark.cassandra.connection.ssl.trust_store.type`:      trust store type (default JKS)
+  *   - `spark.cassandra.connection.ssl.protocol`:              SSL protocol (default TLS)
+  *   - `spark.cassandra.connection.ssl.cipher_suites`:         SSL cipher suites (default TLS_RSA_WITH_AES_128_CBC_SHA, TLS_RSA_WITH_AES_256_CBC_SHA)
   */
 class CassandraConnector(conf: CassandraConnectorConf)
   extends Serializable with Logging {
@@ -226,9 +229,7 @@ object CassandraConnector extends Logging {
             connectTimeoutMillis: Int = CassandraConnectorConf.DefaultConnectTimeoutMillis,
             readTimeoutMillis: Int = CassandraConnectorConf.DefaultReadTimeoutMillis,
             connectionFactory: CassandraConnectionFactory = DefaultConnectionFactory,
-            sslEnabled: Boolean = CassandraConnectorConf.DefaultSSLEnabled,
-            sslTrustStorePath: Option[String] = None,
-            sslTrustStorePassword: Option[String] = None) = {
+            cassandraSSLConf: CassandraSSLConf = CassandraConnectorConf.DefaultCassandraSSLConf) = {
 
     val config = CassandraConnectorConf(
       hosts = hosts,
@@ -243,9 +244,7 @@ object CassandraConnector extends Logging {
       connectTimeoutMillis = connectTimeoutMillis,
       readTimeoutMillis = readTimeoutMillis,
       connectionFactory = connectionFactory,
-      sslEnabled = sslEnabled,
-      sslTrustStorePath = sslTrustStorePath,
-      sslTrustStorePassword = sslTrustStorePassword)
+      cassandraSSLConf = cassandraSSLConf)
 
     new CassandraConnector(config)
   }
