@@ -2,11 +2,11 @@ package com.datastax.spark.connector.cql
 
 import java.net.InetAddress
 
-import org.apache.spark.{Logging, SparkConf}
-
 import scala.util.control.NonFatal
 
-import com.datastax.driver.core.ProtocolOptions
+import org.apache.spark.{Logging, SparkConf}
+
+import com.datastax.driver.core.{ProtocolOptions, SSLOptions}
 import com.datastax.spark.connector.util.ConfigCheck
 
 /** Stores configuration of a connection to Cassandra.
@@ -25,17 +25,24 @@ case class CassandraConnectorConf(
   connectTimeoutMillis: Int = CassandraConnectorConf.DefaultConnectTimeoutMillis,
   readTimeoutMillis: Int = CassandraConnectorConf.DefaultReadTimeoutMillis,
   connectionFactory: CassandraConnectionFactory = DefaultConnectionFactory,
-  sslEnabled: Boolean = CassandraConnectorConf.DefaultSSLEnabled,
-  sslTrustStorePath: Option[String] = None,
-  sslTrustStorePassword: Option[String] = None
+  cassandraSSLConf: CassandraConnectorConf.CassandraSSLConf = CassandraConnectorConf.DefaultCassandraSSLConf
 )
 
 /** A factory for [[CassandraConnectorConf]] objects.
   * Allows for manually setting connection properties or reading them from [[org.apache.spark.SparkConf SparkConf]]
   * object. By embedding connection information in [[org.apache.spark.SparkConf SparkConf]],
   * [[org.apache.spark.SparkContext SparkContext]] can offer Cassandra specific methods which require establishing
-  * connections to a Cassandra cluster.*/
+  * connections to a Cassandra cluster. */
 object CassandraConnectorConf extends Logging {
+
+  case class CassandraSSLConf(
+    enabled: Boolean = false,
+    trustStorePath: Option[String] = None,
+    trustStorePassword: Option[String] = None,
+    trustStoreType: String = "JKS",
+    protocol: String = "TLS",
+    cipherSuites: Array[String] = SSLOptions.DEFAULT_SSL_CIPHER_SUITES
+  )
 
   val DefaultRpcPort = 9160
   val DefaultNativePort = 9042
@@ -48,7 +55,7 @@ object CassandraConnectorConf extends Logging {
   val DefaultReadTimeoutMillis = 12000
   val DefaultCassandraConnectionCompression = ProtocolOptions.Compression.NONE
 
-  val DefaultSSLEnabled = false
+  val DefaultCassandraSSLConf = CassandraSSLConf()
 
   val CassandraConnectionHostProperty = "spark.cassandra.connection.host"
   val CassandraConnectionRpcPortProperty = "spark.cassandra.connection.rpc.port"
@@ -66,6 +73,9 @@ object CassandraConnectorConf extends Logging {
   val CassandraConnectionSSLEnabledProperty = "spark.cassandra.connection.ssl.enabled"
   val CassandraConnectionSSLTrustStorePathProperty = "spark.cassandra.connection.ssl.trust_store.path"
   val CassandraConnectionSSLTrustStorePasswordProperty = "spark.cassandra.connection.ssl.trust_store.password"
+  val CassandraConnectionSSLTrustStoreTypeProperty = "spark.cassandra.connection.ssl.trust_store_type"
+  val CassandraConnectionSSLProtocolProperty = "spark.cassandra.connection.ssl.protocol"
+  val CassandraConnectionSSLCipherSuitesProperty = "spark.cassandra.connection.ssl.cipher_suites"
 
   //Whitelist for allowed CassandraConnector environment variables
   val Properties = Set(
@@ -82,9 +92,12 @@ object CassandraConnectorConf extends Logging {
     CassandraReadTimeoutProperty,
     CassandraConnectionSSLEnabledProperty,
     CassandraConnectionSSLTrustStorePathProperty,
-    CassandraConnectionSSLTrustStorePasswordProperty
+    CassandraConnectionSSLTrustStorePasswordProperty,
+    CassandraConnectionSSLTrustStoreTypeProperty,
+    CassandraConnectionSSLProtocolProperty,
+    CassandraConnectionSSLCipherSuitesProperty
   )
-  
+
   private def resolveHost(hostName: String): Option[InetAddress] = {
     try Some(InetAddress.getByName(hostName))
     catch {
@@ -106,7 +119,7 @@ object CassandraConnectorConf extends Logging {
     val nativePort = conf.getInt(CassandraConnectionNativePortProperty, DefaultNativePort)
     val authConf = AuthConf.fromSparkConf(conf)
     val keepAlive = conf.getInt(CassandraConnectionKeepAliveProperty, DefaultKeepAliveMillis)
-    
+
     val localDC = conf.getOption(CassandraConnectionLocalDCProperty)
     val minReconnectionDelay = conf.getInt(CassandraMinReconnectionDelayProperty, DefaultMinReconnectionDelayMillis)
     val maxReconnectionDelay = conf.getInt(CassandraMaxReconnectionDelayProperty, DefaultMaxReconnectionDelayMillis)
@@ -115,13 +128,29 @@ object CassandraConnectorConf extends Logging {
     val readTimeout = conf.getInt(CassandraReadTimeoutProperty, DefaultReadTimeoutMillis)
 
     val compression = conf.getOption(CassandraConnectionCompressionProperty)
-        .map(ProtocolOptions.Compression.valueOf).getOrElse(DefaultCassandraConnectionCompression)
+      .map(ProtocolOptions.Compression.valueOf).getOrElse(DefaultCassandraConnectionCompression)
 
     val connectionFactory = CassandraConnectionFactory.fromSparkConf(conf)
 
-    val sslEnabled = conf.getBoolean(CassandraConnectionSSLEnabledProperty, DefaultSSLEnabled)
+    val sslEnabled = conf.getBoolean(CassandraConnectionSSLEnabledProperty,
+      defaultValue = DefaultCassandraSSLConf.enabled)
     val sslTrustStorePath = conf.getOption(CassandraConnectionSSLTrustStorePathProperty)
     val sslTrustStorePassword = conf.getOption(CassandraConnectionSSLTrustStorePasswordProperty)
+    val sslTrustStoreType = conf.get(CassandraConnectionSSLTrustStoreTypeProperty,
+      defaultValue = DefaultCassandraSSLConf.trustStoreType)
+    val sslProtocol = conf.get(CassandraConnectionSSLProtocolProperty,
+      defaultValue = DefaultCassandraSSLConf.protocol)
+    val sslCipherSuites = conf.getOption(CassandraConnectionSSLCipherSuitesProperty)
+      .map(_.split(",").map(_.trim)).getOrElse(DefaultCassandraSSLConf.cipherSuites)
+
+    val cassandraSSLConf = CassandraSSLConf(
+      enabled = sslEnabled,
+      trustStorePath = sslTrustStorePath,
+      trustStorePassword = sslTrustStorePassword,
+      trustStoreType = sslTrustStoreType,
+      protocol = sslProtocol,
+      cipherSuites = sslCipherSuites
+    )
 
     CassandraConnectorConf(
       hosts = hosts,
@@ -137,8 +166,7 @@ object CassandraConnectorConf extends Logging {
       connectTimeoutMillis = connectTimeout,
       readTimeoutMillis = readTimeout,
       connectionFactory = connectionFactory,
-      sslEnabled = sslEnabled,
-      sslTrustStorePath = sslTrustStorePath,
-      sslTrustStorePassword = sslTrustStorePassword)
+      cassandraSSLConf = cassandraSSLConf
+    )
   }
 }
