@@ -1,5 +1,6 @@
 1.2.3 (unreleased)
  * Support for connection compressions configuration (SPARKC-124)
+ * Support for connection encryption configuration (SPARKC-118)
 
 1.2.2
  * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
